# stryd-solana

./: .env.example  Anchor.toml  Cargo.toml  package.json
programs/stryd-solana/: Cargo.toml
programs/stryd-solana/src/: lib.rs
tests/: challenge.ts
