[workspace]
members = [
    "programs/*"
]
resolver = "2"
[build]
rustflags = ["--cfg", "custom-heap"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
